--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ syntax: glob # for hg-git users
 /Makefile
 builds/Makefile
 builds/msvc/Makefile
+configure
 doc/Makefile
 Makefile.in
+configure
 libtool
 config
 config.status
