--- a/builds/msvc/vs2010/local_thr/local_thr.vcxproj
+++ b/builds/msvc/vs2010/local_thr/local_thr.vcxproj
@@ -61,7 +61,7 @@
   <ImportGroup Label="PropertySheets">
     <Import Project="$(ProjectDir)..\..\properties\$(Configuration).props" />
     <Import Project="$(ProjectDir)..\..\properties\Output.props" />
-    <Import Project="$(ProjectDir)..\..\vs2015\$(ProjectName)\$(ProjectName).props" />
+    <Import Project="$(ProjectDir)$(ProjectName).props" />
   </ImportGroup>
   <ItemGroup>
     <ClInclude Include="..\..\platform.hpp" />
