--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ dist: trusty
 env:
   matrix:
     - BUILD_TYPE=default CURVE=tweetnacl DRAFT=enabled
-    - BUILD_TYPE=android CURVE=tweetnacl
     - BUILD_TYPE=cmake CURVE=tweetnacl
     - BUILD_TYPE=default
   # tokens to deploy releases on OBS and create/delete temporary branch on Github.
@@ -74,6 +73,9 @@ matrix:
         packages:
         - g++-6
         - gcc-6
+  - env: BUILD_TYPE=android CURVE=tweetnacl
+    os: linux
+    dist: trusty
 
 sudo: required
 
