Problem: ZAP client code is duplicated in all mechanisms
Solution: created a zap_client_t class, extracted first function send_zap_request from curve_server_t

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -565,7 +565,8 @@ set (cxx-sources
         udp_engine.cpp
         udp_address.cpp
         scatter.cpp
-        gather.cpp)
+        gather.cpp
+		zap_client.cpp)
 
 set (rc-sources version.rc)
 
